...
            item {
                ToggleChip(
                    modifier = Modifier.fillMaxWidth(),
                    onCheckedChange = { viewModel.setHeartRateAccuracy(it) },
                    checked = onlyHighHrAccuracy,
                    label = {
                        Text("Only high HR accuracy")
                    },
                    toggleControl = {
                        Checkbox(checked = onlyHighHrAccuracy)
                    }
                )
            }
            item {
                ToggleChip(
                    modifier = Modifier.fillMaxWidth(),
                    onCheckedChange = { viewModel.setKeepScreenOn(it) },
                    checked = keepScreenOn,
                    label = {
                        Text("Keep screen on during exercise")
                    },
                    toggleControl = {
                        Checkbox(checked = keepScreenOn)
                    }
                )
            }
...
