...
                    horizontalArrangement = Arrangement.spacedBy(8.dp)
                ) {
                    Button(
                        colors = ButtonDefaults.secondaryButtonColors(),
                        onClick = onSettingsClick
                    ) {
                        Icon(imageVector = Icons.Outlined.Settings, contentDescription = "Settings")
                    }

                    ToggleButton(
                        checked =
                        connectionStatus == ConnectionState.ConnectionStatus.READY,
                        enabled = canConnectPolar,
...
